fix: scroll overlap

--- a/src/app/qa/index.css
+++ b/src/app/qa/index.css
@@ -9,7 +9,7 @@
 
 @layer {
     * {
-        scroll-margin-top: 15vh;
+        scroll-margin-top: 14vh;
     }
 
     :root {
